syntax = "proto3";

package event;

message Reward {
  string id = 1;
  string eventId = 2;           
  string title = 3;             
  string description = 4;       
  int32 requiredAttendance = 5; 
  string rewardType = 6;        
  string rewardValue = 7;       
  bool isActive = 8;            
  string createdAt = 9;         
  string updatedAt = 10;        
}

service EventService {
  rpc CreateEvent (CreateEventRequest) returns (Event);
  rpc CreateAttendanceEvent (CreateAttendanceEventRequest) returns (CreateAttendanceEventResponse);
  rpc ListEvents (ListEventsRequest) returns (ListEventsResponse);
  rpc GetEventDetail (GetEventDetailRequest) returns (GetEventDetailResponse);
}

message CreateEventRequest {
  string title = 1;
  string description = 2;
  string userId = 3;
}

message Event {
  string id = 1;
  string title = 2;
  string description = 3;
  string userId = 4;
  string createdAt = 5;
}

message CreateAttendanceEventRequest {
  string title = 1;
  string description = 2;
  string startDate = 3;
  string endDate = 4;
  string userId = 5;
  bool isActive = 6;
  int32 requiredDays = 7;
}

message AttendanceEvent {
  string id = 1;
  string title = 2;
  string description = 3;
  string startDate = 4;
  string endDate = 5;
  string userId = 6;
  string type = 7;
  string createdAt = 8;
  bool isActive = 9;
  int32 requiredDays = 10;
}

message CreateAttendanceEventResponse {
  bool success = 1;
  string message = 2;
  AttendanceEvent data = 3;
}

message ListEventsRequest {
  int32 page = 1;
  int32 limit = 2;
  string searchKeyword = 3;
}

message ListEventsResponse {
  bool success = 1;
  string message = 2;
  repeated AttendanceEvent events = 3;
  int32 total = 4;
  int32 currentPage = 5;
  int32 totalPages = 6;
}

message GetEventDetailRequest {
  string eventId = 1;
}

message GetEventDetailResponse {
  bool success = 1;
  string message = 2;
  AttendanceEvent event = 3;
  repeated Reward rewards = 4;
} 